# aftermath_client

./: CMakeLists.txt  README.md
client/: Application.cpp  Application.h  main.cpp
client/audio/: AudioService.cpp  AudioService.h
client/controller/: GameController.cpp  GameController.h
client/dto/: GameEventTypes.h  GameRequests.h  GameResponses.h
client/event/: BlockingQueue.h  EventType.h  GameEvent.cpp  GameEvent.h
client/game/: GameController.cpp  GameController.h  GameState.cpp  GameState.h
client/input/: InputHandler.cpp  InputHandler.h
client/model/: GameState.cpp  GameState.h
client/network/: NetworkHandler.cpp  NetworkHandler.h  NetworkSender.cpp  NetworkSender.h  WebSocketHandler.cpp  WebSocketHandler.h
client/ui/: Renderer.cpp  Renderer.h  TuiRenderer.cpp  TuiRenderer.h
client/utils/: JsonParser.h
